icon added and horizontal scroll fixed

--- a/src/scss/_monsters.scss
+++ b/src/scss/_monsters.scss
@@ -162,7 +162,8 @@
   width: 100%;
   margin-bottom: 2rem;
 }
-.fa-dragon {
+.fa-dragon,
+.fa-helmet-battle {
   font-size: 10rem;
   opacity: 0.3;
   background-color: var(--white-color);
@@ -170,12 +171,16 @@
   text-align: center;
   width: 20rem;
 }
-.fa-dragon::after {
+.fa-dragon::after,
+.fa-helmet-battle::after {
   margin-top: 2rem;
   display: block;
   content: "You have no monsters selected. Add them above!";
   font: 900 1.3rem var(--sub-font);
   height: 4rem;
+}
+.fa-helmet-battle::after {
+  content: "You have no characters written. Add them below!";
 }
 .monster-popup {
   position: fixed;
